Caused trouble with politician/scores partial - Revert "Ensure report scores aren't squished, for example in the politician cause scores list"
This reverts commit 7b72289f670baa13ed7c012c743ca25303a4f39b.

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -440,5 +440,4 @@ div.report_score .score {
 
 div.report_score {
     margin-top: 5px;
-    width: 3em;
 }
